[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/Enemigos/EnemigoBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Enemigos/spawn_interceptor.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemigos/interceptor.png" type="Texture" id=3]
[ext_resource path="res://Juego/Enemigos/EnemigoInterceptor.gd" type="Script" id=4]
[ext_resource path="res://Juego/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 60, 67.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteSpawn:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawn"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteSpawn:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ), Vector2( 3, 3 ), Vector2( 4, 4 ), Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 491.321

[sub_resource type="CircleShape2D" id=6]
radius = 1106.28

[node name="EnemigoInterceptor" instance=ExtResource( 1 )]
physics_material_override = SubResource( 7 )
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 4 )
numero_explosiones = 1

[node name="SpriteSpawn" type="Sprite" parent="." index="0"]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Sprite" parent="." index="1"]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 1, -0.5 )
shape = SubResource( 8 )

[node name="Canion" parent="." index="3"]
position = Vector2( 40, 0 )
proyectil = ExtResource( 5 )
cadencia_disparo = 1.2
velocidad_proyectil = 1200

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -22 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( 0, 22 )

[node name="AnimacionesInterceptor" type="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 4 )
anims/default = SubResource( 3 )
anims/spawn = SubResource( 2 )

[node name="AreaDisparo" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDisparo" index="0"]
shape = SubResource( 5 )

[node name="AreaDetección" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetección" index="0"]
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimacionesInterceptor" to="." method="_on_AnimacionesInterceptor_animation_finished"]

[editable path="Canion"]
